--- a/WikiMovier/WikiMovier.csproj
+++ b/WikiMovier/WikiMovier.csproj
@@ -5,6 +5,11 @@
     <UserSecretsId>aspnet-WikiMovier-0B9A721B-400C-4658-A967-CAC2E410FB0F</UserSecretsId>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="Data\Migrations\20180416162918_initialmigration.cs" />
+    <Compile Remove="Data\Migrations\20180416162918_initialmigration.Designer.cs" />
+  </ItemGroup>
+
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.5" />
