--- a/WikiMovier/WikiMovier.csproj
+++ b/WikiMovier/WikiMovier.csproj
@@ -8,11 +8,14 @@
   <ItemGroup>
     <Compile Remove="Data\Migrations\20180416162918_initialmigration.cs" />
     <Compile Remove="Data\Migrations\20180416162918_initialmigration.Designer.cs" />
+    <Compile Remove="Data\Migrations\20180418120851_initail-migration.cs" />
+    <Compile Remove="Data\Migrations\20180418120851_initail-migration.Designer.cs" />
   </ItemGroup>
 
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.5" />
+    <PackageReference Include="Microsoft.Entityframeworkcore.sqlserver" Version="2.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.0.1" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.2" PrivateAssets="All" />
   </ItemGroup>
